--- a/src/components/styles.modules.css
+++ b/src/components/styles.modules.css
@@ -1,14 +1,5 @@
-.main {
-    width: 500px;
-    padding: 50px;
-}
-
-.main ul {
-    list-style-type: none;
-}
-
-
-.main ul li {
-    padding: 10px;
-
+#tablist {
+    display: flex;
+    width: 900px;
+    
 }
