--- a/src/components/styles.modules.css
+++ b/src/components/styles.modules.css
@@ -1,5 +1,16 @@
 #tablist {
     display: flex;
-    width: 900px;
-    
+    width: 400px;
+    justify-content: center;
+}
+
+.tabby {
+    padding: 20px;
+    border: 3px solid black;
+}
+
+#contents {
+    width: 400px;
+    padding: 20px;
+    border: 3px solid black;
 }
